--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "bin": {
     "brain-games": "bin/brain-games.js"
   },
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/Keyaru001/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/Keyaru001/frontend-project-44#readme"
+  "homepage": "https://github.com/Keyaru001/frontend-project-44#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
