--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,13 +1,21 @@
+---
+
+plugins:
+  # https://github.com/jest-community/eslint-plugin-jest
+  - import
+
+# https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
-  browser: true
-  es2021: true
   node: true
-extends: standard
-overrides: []
+
+extends:
+  - 'airbnb-base'
+  - 'plugin:import/recommended'
+
 parserOptions:
   ecmaVersion: latest
-  sourceType: module
-rules: 
+
+rules:
   no-console: 0
   import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
     - error
